# GradientOS

./: .gitignore  AGENTS.md  AGENT_SCRATCHPAD.md  DEVLOG.md  QUICK_START.md  START_HERE.md  bash.text  pyproject.toml  requirements.txt  run-api.ps1  run-api.sh  run-sim.ps1  run-sim.sh  run-vision.sh  run-web.sh  run.sh  run_controller.py  setup.md  setup.sh  start-env.sh  start.sh  udp_client.py  ui_start.py
.cursor/rules/: agent-ambiguity-triggers.md  agent-gated-checklist.md  agent-memory-loops.md  agent-subagents.md  rtos-ethercat-nic-and-master.md  rtos-ethercat-python-integration.md  rtos-ethercat-readme.md  rtos-ethercat-rtcore-architecture.md
RTOS-ETHERCAT-PLAN/: Plan overview & to-do.md  RTOS-ETHERCAT-plan.md  Uncertainties.md
diagnostics/: ik_path_diagnostics.py
docs/: README.md  UI_readme.md  command_api.md  diagnostics.md  run_controller.md  servo_driver.md  trajectory_execution.md  trajectory_recorder.md  utils.md
docs/ethercat/: bringup.md  igh.md  rtcore_jog.md
docs/resources/: a6ec_manual_codes.json  a6ec_manual_codes.md  brake-wiring-diagram.md  brake-wiring-diagram.mermaid
mini-6dof-arm/assembly/: README.md
recorded_trajectories/: __planner_preview__.json  __weld_preview__.json  my_new_path.json  new_test.json  test_path.json
recorded_trajectories/weld_programs/: test_0.json  test_01.json  test_02.json  test_03.json
scripts/: chart_generator.py  enable-msvc-env.ps1  extract_a6ec_manual_codes.py  performance_tester.py  rtcore_jog.py  stream_camera.py  test_camera.py
scripts/ethercat/: diagnose_host.sh  ethercat-eth0.conf  ethercat-eth1.conf  install_igh.sh  restore_original_wiring.sh
scripts/sampler/: README.md  cpu_usage.py  rtcore_diag_watch.py  rtcore_metrics.py  rtos_monitor.yml  run_sampler.sh  timer_jitter.py
src/arm_controller/: command_api.py
src/config/: pid_gains.json
src/gradient_os/: cli_controller.py  ik_solver.py  run_controller.py  ui_start.py
src/gradient_rt_motion/: .gitignore  CMakeLists.txt  Makefile  README.md  a6ec_pdo.hpp  ds402.hpp  ecrt_detect.hpp  ipc_v1.hpp  main.cpp
src/ikfast_solver/: CMakeLists.txt  ik_wrapper.cpp  ikfast.h
systemd/: README.md  arm-controller.service  install.sh  restart.sh  status.sh
systemd/api/: restart.sh  status.sh  uninstall.sh
systemd/controller/: arm-controller.service  stop.sh  uninstall.sh
systemd/ethercat-host/: 10-ethercat0.link  10-unmanaged-ethercat.conf  10-uplink0.link  ethercat.conf  gradient-cpu-performance.service  gradient-cpu-performance.sh  gradient-ethercat-nic-tune.service  gradient-ethercat-nic-tune.sh  gradient-irq-affinity.service  gradient-irq-affinity.sh  install.sh  rtos-apply-cmdline.sh  uninstall.sh
systemd/rt-motion/: gradient-rt-motion.service  install.sh  restart.sh  status.sh  stop.sh  uninstall.sh
systemd/wifi/: gradient-wifi-keepalive.service  gradient-wifi-keepalive.sh  install.sh  uninstall.sh
tests/: test_api_endpoints.py  test_driver.py  test_end_to_end.py  test_planning.py  test_protocol.py  test_solver.py
video-analysis/weird-moves/: metadata.json
web-ui/: README.md  design.md  index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.tsx  ArmVisualizer.tsx  ControlPanel.tsx  TelemetryCharts.tsx  (+5 more)
welding-symbols-svg/: symbol-candidates.json
(+139 files in other folders)
