[build-system]
requires = [
    "scikit-build-core==0.11.5",
    "pybind11==2.13.6",
    "pybind11-global==2.13.6",
    "numpy==2.3.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "gradient-os"
version = "0.1.0"
description = "Software for the Mini 6DOF Robotic Arm"
readme = "docs/README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "TerrorProforma" },
]
dependencies = [
    "fastapi==0.115.0",
    "numpy==2.3.0",
    "pyserial==3.5",
    "requests==2.32.3",
    "scipy==1.15.3",
    "sse-starlette==2.0.0",
    "uvicorn[standard]==0.32.0",
]

[project.scripts]
gradient-ui = "gradient_os.ui_start:main"
gradient-controller = "gradient_os.run_controller:main"
gradient-cli = "gradient_os.cli_controller:main"
gradient-vision = "gradient_os.vision.cli:main"
gradient-api = "gradient_os.api.main:main"

[project.optional-dependencies]
core = [
    "fastapi==0.115.0",
    "numpy==2.3.0",
    "pyserial==3.5",
    "requests==2.32.3",
    "scipy==1.15.3",
    "sse-starlette==2.0.0",
    "uvicorn[standard]==0.32.0",
]
ui = [
    "PySide6==6.8.0.2",
    "PySide6_Addons==6.8.0.2",
    "PySide6_Essentials==6.8.0.2",
    "shiboken6==6.8.0.2",
]
vision = [
    "imageio==2.37.0",
    "opencv-python==4.10.0.84",
    "pandas==2.3.0",
    "pillow==11.2.1",
]
ai = [
    "ultralytics",
    "torch",
    "torchvision",
    "torchaudio",
]
datasets = [
    "lerobot",
]
dev = [
    "pytest==8.4.2",
    "pytest-mock==3.14.1",
    "pre_commit==4.2.0",
]

[tool.scikit-build]
cmake.source-dir = "src/ikfast_solver"
wheel.packages = ["src/gradient_os", "src/ikfast_solver"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = [
    "openrave",
]
